@@ -1,3 +1,7 @@
+Wed Apr 13 22:45:23 EDT 2011	JK Lowden <jklowden@freetds.org>
+	* doc/.cvsignore doc/userguide.sgml src/tds/config.c
+	- minor changes to log messages 
+
 Tue Apr 12 11:26:29 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* src/dblib/bcp.c 
 	- bcp_send row returns FAIL if dbconvert fails to 
@@ -42,4 +46,4 @@ Sat Apr  9 16:15:00 EDT 2011	JK Lowden <jklowden@freetds.org>
 	* ChangeLog-0.91 added because of release
 
 $FreeTDS$
-$Id: ChangeLog,v 1.3218 2011/04/12 15:30:35 jklowden Exp $
+$Id: ChangeLog,v 1.3219 2011/04/14 02:47:07 jklowden Exp $
